<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standart_padding"
        android:layout_marginRight="@dimen/standart_padding"
        android:hint="@string/student_name_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_faculty_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/student_faculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standart_padding"
        android:layout_marginRight="@dimen/standart_padding"
        android:hint="@string/student_faculty_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_number_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/student_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standart_padding"
        android:layout_marginRight="@dimen/standart_padding"
        android:hint="@string/student_number_hint"
        android:inputType="phone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_email_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/student_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standart_padding"
        android:layout_marginRight="@dimen/standart_padding"
        android:hint="@string/student_email_hint"
        android:inputType="textWebEmailAddress"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/student_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_confirm_button"/>

    </LinearLayout>

</LinearLayout>