<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="@dimen/standart_padding"
            android:text="@string/student_name_label"/>

        <TextView
            android:id="@+id/student_list_item_studentNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:paddingRight="@dimen/standart_padding"
            android:text="Student name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="@dimen/standart_padding"
            android:text="@string/student_faculty_label"/>

        <TextView
            android:id="@+id/student_list_item_studentFacultyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:paddingRight="@dimen/standart_padding"
            android:text="Faculty name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="@dimen/standart_padding"
            android:text="@string/student_number_label"/>

        <TextView
            android:id="@+id/student_list_item_studentNumberTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:paddingRight="@dimen/standart_padding"
            android:text="Phone number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="@dimen/standart_padding"
            android:text="@string/student_email_label"/>

        <TextView
            android:id="@+id/student_list_item_studentEmailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:paddingRight="@dimen/standart_padding"
            android:text="Email address"/>

    </LinearLayout>

</LinearLayout>
